--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -72,6 +72,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from gymnasium import Env\n",
+    "from IPython.display import display, Markdown\n",
     "from ipywidgets import interact, widgets\n",
     "from numpy.typing import NDArray\n",
     "from scipy.signal import find_peaks\n",
@@ -182,6 +183,17 @@
     }
    },
    "source": [
+    "## Control Theory and Reinforcement Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "\n",
     "</div>\n",
     "<div style=\"float: left; width: 50%;\">\n",
@@ -201,17 +213,6 @@
     "    </figure>\n",
     "</div>\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Control Theory and Reinforcement Learning"
    ]
   },
   {
@@ -1010,12 +1011,6 @@
     "\\mathbf{G}(s) = \\frac{\\mathbf{Y}(s)}{\\mathbf{X}(s)} = \\frac{ \\mathcal{L}\\left\\{y(t)\\right\\} }{ \\mathcal{L}\\left\\{x(t)\\right\\}}\n",
     "$$\n",
     "\n",
-    "which can be rearranged as:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{Y}(s) = \\mathbf{G}(s)\\mathbf{X}(s)\n",
-    "$$\n",
-    "\n",
     "Where $s = \\sigma + j \\cdot \\omega$ is a complex variable. When we're only interested in the steady-state response of the system then it is sufficient to set $\\sigma = 0$ (thus $s = j \\cdot \\omega$), which reduces the Laplace transforms with complex arguments to Fourier transforms with real argument $\\omega$."
    ]
   },
@@ -1028,6 +1023,27 @@
    },
    "source": [
     "The transfer function was the primary tool used in classical control engineering. However, it has proven to be unwieldy for the analysis of multiple-input multiple-output (MIMO) systems, and has been largely supplanted by state space representations for such systems. In spite of this, a transfer matrix can always be obtained for any linear system, in order to analyze its dynamics and other properties: each element of a transfer matrix is a transfer function relating a particular input variable to an output variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The transfer function has the general form:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G}(s) = K \\frac{(s - a_1)(s - a_2)\\dots}{(s - b_1)(s - b_2)(s - b_3)\\dots}\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- $K$ is the system's gain.\n",
+    "- $a_i$ are the system's poles.\n",
+    "- $b_i$ are the system's zeros."
    ]
   },
   {
@@ -1236,6 +1252,7 @@
     "- $k = \\frac{\\lambda}{l}$\n",
     "- $c$: Damping coefficient.\n",
     "- $f(t)$: Force applied on the object.\n",
+    "- $\\gamma$: Motor's gear factor.\n",
     "- $g$: Gravity.\n",
     "</div>\n",
     "</div>"
@@ -1252,12 +1269,12 @@
     "Application of Newtonian physics to this system leads to the following model:\n",
     "\n",
     "$$\n",
-    "m\\ddot{z}(t) + c \\dot{z}(t) + kz(t) = f(t)\n",
+    "m\\ddot{z}(t) + c \\dot{z}(t) + kz(t) = \\gamma f(t)\n",
     "\\\\\n",
     "$$\n",
     "\n",
     "We can convert this to state space form with input $u(t) = f(t)$ and output\n",
-    "$x(t)$; by introducing:\n",
+    "$z(t)$; by introducing:\n",
     "\n",
     "$$\n",
     "X(t) = \\begin{bmatrix}\n",
@@ -1283,7 +1300,7 @@
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "x_2(t) \\\\\n",
-    "\\frac{u(t)}{m} - \\frac{c}{m}x_2(t) - \\frac{k}{m}x_1(t)\\\\\n",
+    "\\frac{\\gamma}{m} u(t) - \\frac{c}{m}x_2(t) - \\frac{k}{m}x_1(t)\\\\\n",
     "\\end{bmatrix}\n",
     "=\n",
     "\\begin{bmatrix}\n",
@@ -1296,7 +1313,7 @@
     "+\n",
     "\\begin{bmatrix}\n",
     "0 \\\\\n",
-    "\\frac{1}{m}\\\\\n",
+    "\\frac{\\gamma}{m}\\\\\n",
     "\\end{bmatrix}\n",
     "\\begin{bmatrix}\n",
     "u(t) \\\\\n",
@@ -1325,7 +1342,7 @@
     "=\n",
     "\\begin{bmatrix}\n",
     "0 \\\\\n",
-    "\\frac{1}{m}\\\\\n",
+    "\\frac{\\gamma}{m}\\\\\n",
     "\\end{bmatrix};\n",
     "C = \\begin{bmatrix}\n",
     "1 & 0 \\\\\n",
@@ -1362,7 +1379,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\mathbf{G}(s) = C(sI - A)^{-1}B + D = \\frac{1}{m s^2 + c s + k}\n",
+    "\\mathbf{G}(s) = C(sI - A)^{-1}B + D = \\frac{\\gamma}{m s^2 + c s + k}\n",
     "$$"
    ]
   },
@@ -1395,6 +1412,7 @@
     "- $\\mu_c$: cart friction coefficient.\n",
     "- $\\mu_p$: pendulum friction coefficient.\n",
     "- $f(t)$: force applied on the cart.\n",
+    "- $\\gamma$: Motor's gear factor.\n",
     "</div>\n",
     "</div>"
    ]
@@ -1410,13 +1428,15 @@
     "Application of Newtonian physics to this system leads to the [following model](https://sharpneat.sourceforge.io/research/cart-pole/cart-pole-equations.html):\n",
     "\n",
     "$$\n",
-    "\\ddot{y}(t) = \\frac{1}{m\\sin^2\\theta(t) + M} \\left[\n",
-    "f(t) + ml \\dot\\theta^2(t) \\sin\\theta(t) - mg\\sin\\theta(t)\\cos\\theta(t)\n",
+    "\\ddot{y}(t) = \\frac{1}{m\\cos^2\\theta(t) - (1+k)(M+m)} \\left[\n",
+    "mg\\sin\\theta(t)\\cos\\theta(t) - (1+k)(\\gamma f(t) + ml\\dot\\theta^2(t) \\sin\\theta(t))\n",
     "\\right]\\\\\n",
-    "\\ddot\\theta(t) = \\frac{1}{Ml - ml\\cos^2\\theta} \\left[\n",
-    "g\\sin\\theta(t) - \\cos\\theta(t) f(t) + ml\\dot\\theta^2(t)\\cos\\theta(t)\\sin\\theta(t)\n",
+    "\\ddot\\theta(t) = \\frac{1}{(1+k)(M+m)l - ml\\cos^2\\theta(t)} \\left[\n",
+    "(M+m)g\\sin\\theta(t) - \\cos\\theta(t) (\\gamma f(t) + ml\\dot\\theta^2(t)\\sin\\theta(t))\n",
     "\\right]\n",
     "$$\n",
+    "\n",
+    "with $k = \\frac{1}{3}.$\n",
     "\n",
     "We're only interested in controlling the pendulum's angle, so we can ignore the first equation.\n",
     "\n",
@@ -1447,9 +1467,8 @@
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "x_2(t) \\\\\n",
-    "\\frac{1}{Ml - ml \\cos^2 x_1(t)} \\left[\n",
-    "g \\sin x_1(t) - \\cos x_1(t) u(t) + m l x_2(t)^2 \\cos x_1(t) \\sin x_1(t)\n",
-    "\\right] \\\\\n",
+    "\\frac{1}{(1+k)(M+m)l - ml\\cos^2 x_1(t)} \\left[\n",
+    "(M+m)g\\sin x_1(t) - \\cos x_1(t) (\\gamma u(t) + ml x_2^2(t)\\sin x_1(t))\\right] \\\\\n",
     "\\end{bmatrix}\n",
     "$$"
    ]
@@ -1523,7 +1542,7 @@
     "\\begin{bmatrix}\n",
     "x_2(t) \\\\\n",
     "\\frac{1}{M l} \\left[\n",
-    "-u(t) + (M + m) g x_1(t)\n",
+    "- \\gamma u(t) + (M + m) g x_1(t)\n",
     "\\right] \\\\\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
@@ -1535,7 +1554,7 @@
     "\\end{bmatrix}\n",
     "+\n",
     "\\begin{bmatrix}\n",
-    "0 \\\\ -\\frac{1}{Ml}\n",
+    "0 \\\\ -\\frac{\\gamma}{Ml}\n",
     "\\end{bmatrix}\n",
     "\\begin{bmatrix}\n",
     "u(t)\\\\\n",
@@ -1559,7 +1578,7 @@
     "\\frac{(M + m)g}{Ml} & 0\\\\\n",
     "\\end{bmatrix};\n",
     "B = \\begin{bmatrix}\n",
-    "0 \\\\ -\\frac{1}{Ml}\n",
+    "0 \\\\ -\\frac{\\gamma}{Ml}\n",
     "\\end{bmatrix};\n",
     "C = \\begin{bmatrix}\n",
     "1 & 0 \\\\\n",
@@ -1594,7 +1613,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\mathbf{G}(s) = C(sI - A)^{-1}B + D = \\frac{-1}{Mls^2 - g(M+m)}\n",
+    "\\mathbf{G}(s) = C(sI - A)^{-1}B + D = \\frac{-\\gamma}{Mls^2 - g(M+m)}\n",
     "$$\n",
     "\n"
    ]
@@ -1609,8 +1628,18 @@
    "source": [
     "# System Identification\n",
     "\n",
-    "System Identification is the process of constructing a mathematical model of a\n",
-    "(dynamical) system from observations (measurements) of its inputs and outputs."
+    "System Identification is the process of constructing a mathematical model of a (dynamical) system from observations (measurements) of its inputs and outputs. It uses statistical methods to build mathematical models of dynamical systems from measured data. System identification also includes the optimal design of experiments for efficiently generating informative data for fitting such models as well as model reduction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In control engineering, the objective is to obtain a good performance of the closed-loop system, which is the one comprising the physical system, the feedback loop and the controller. This performance is typically achieved by designing the control law relying on a model of the system, which needs to be identified starting from experimental data. If the model identification procedure is aimed at control purposes, what really matters is not to obtain the best possible model that fits the data, as in the classical system identification approach, but to obtain a model satisfying enough for the closed-loop performance."
    ]
   },
   {
@@ -1623,7 +1652,37 @@
    "source": [
     "## Structural Identifiability\n",
     "\n",
-    "Given a state-space model for a given system, we would like to know whether the unknown parameters are uniquely determined by the input-output behaviour of the system."
+    "In structural identifiability, given a model for a given system, we would like to know whether the unknown parameters are uniquely determined by the input-output behaviour of the system.\n",
+    "\n",
+    "In certain cases, the model structure may not permit a unique solution for this estimation problem, even when the data is continuous and free from noise. To avoid potential issues, it is recommended to verify the uniqueness of the solution in advance, prior to conducting any actual experiments. The lack of structural identifiability implies that there are multiple solutions for the problem of system identification, and the impossibility of distinguishing between these solutions suggests that the system has poor forecasting power as a model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Consider an LTI system with the following state-space representation:\n",
+    "\n",
+    "$$\n",
+    "\\displaystyle\n",
+    "{\\begin{aligned}\n",
+    "{\\dot{\\mathbf{x}}}_{1}(t) &= -\\theta _{1}\\mathbf{x}_{1}\\\\\n",
+    "{\\dot {\\mathbf{x}}}_{2}(t) &= \\theta _{1}\\mathbf{x}_{1}\\\\\n",
+    "\\mathbf{y}(t) &=\\theta _{2}\\mathbf{x}_{2}\n",
+    "\\end{aligned}}\n",
+    "$$\n",
+    "\n",
+    "and with initial conditions given by $\\displaystyle \\mathbf{x}_{1}(0)=\\theta_{3}$ and $\\displaystyle \\mathbf{x}_{2}(0) = 0$. The solution of the output $\\mathbf{y}$ is\n",
+    "\n",
+    "$$\n",
+    "\\displaystyle \\mathbf{y}(t) = \\theta_{2}\\theta_{3}e^{-\\theta_{1}t}\\left(e^{\\theta_{1}t}-1\\right),\n",
+    "$$\n",
+    "\n",
+    "which implies that the parameters $\\theta_2$ and $\\displaystyle \\theta_{3}$ are not structurally identifiable. For instance, the parameters $\\displaystyle \\theta _{1}=1,\\theta _{2}=1,\\theta _{3}=1$ generate the same output as the parameters $\\displaystyle \\theta _{1}=1,\\theta _{2}=2,\\theta _{3}=0.5$. "
    ]
   },
   {
@@ -1635,7 +1694,26 @@
    },
    "source": [
     "## Parameter Identification\n",
-    "\n"
+    "\n",
+    "Parameter identification or parameter estimation deals with estimating the values of parameters based on measured empirical data that has a random component. The parameters describe an underlying physical setting in such a way that their value affects the distribution of the measured data. An estimation method attempts to approximate the unknown parameters using the measurements. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Commonly used estimation methods include:\n",
+    "\n",
+    "- Maximum likelihood estimators\n",
+    "- Least squares\n",
+    "- Minimum mean squared error (MMSE), also known as Bayes least squared error (BLSE)\n",
+    "- Maximum a posteriori (MAP)\n",
+    "- Particle filter\n",
+    "- Kalman filter, and its various derivatives"
    ]
   },
   {
@@ -1726,6 +1804,45 @@
     "- Can we use the same approach with the inverted pendulum systems?\n",
     "- If yes, go ahead and determine the system's parameters.\n",
     "- If no, then explain your reasoning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "### Hint\n",
+    "\n",
+    "Open this help if you need help with the creating the step controller."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "source": [
+    "```python\n",
+    "class StepController:\n",
+    "    def __init__(self, t_threshold: int = 50) -> None:\n",
+    "        self.t = 0\n",
+    "        self.t_threshold = t_threshold\n",
+    "\n",
+    "    def act(self, observation: NDArray) -> NDArray:\n",
+    "        self.t += 1\n",
+    "        if self.t < self.t_threshold:\n",
+    "            return np.zeros(1)\n",
+    "        else:\n",
+    "            return np.array([10])\n",
+    "```"
    ]
   },
   {
@@ -1881,7 +1998,7 @@
    },
    "outputs": [],
    "source": [
-    "tf = ct.tf(1, [Tn**2 / K, 2 * zeta * Tn / K, 1 / K])\n",
+    "tf = ct.tf(K, [Tn**2, 2 * zeta * Tn, 1])\n",
     "tf"
    ]
   },
@@ -1897,49 +2014,61 @@
     "We then match the coefficient of each one of the terms into the system's transfer function.\n",
     "\n",
     "$$\n",
-    "\\mathbf{G}(s) = C(sI - A)^{-1}B + D = \\frac{1}{m s^2 + c s + k}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "m = Tn**2 / K\n",
-    "c = 2 * zeta * Tn / K\n",
-    "k = 1 / K\n",
-    "print(f\"{m=}, {c=}, {k=}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "msd_params = MassSpringDamperParameters(m=m, c=c, k=k)\n",
+    "\\mathbf{G}(s) = C(sI - A)^{-1}B + D = \\frac{\\gamma}{m s^2 + c s + k} = \\frac{\\frac{\\gamma}{k}}{\\frac{m}{k} s^2 + \\frac{c}{k} s + 1}\n",
+    "$$\n",
     "\n",
+    "which gives us\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}\\\\\n",
+    "\\frac{\\gamma}{k} &= \\hat{K} \\\\\n",
+    "\\frac{m}{k} &= \\hat{T}_n^2 \\\\\n",
+    "\\frac{c}{k} &= 2 \\hat{\\zeta}\\hat{T}_n \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "Unfortunately not all parameters are identifiable, but we don't have to identify them individually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "gamma_k = K\n",
+    "m_k = Tn**2\n",
+    "c_k = 2 * zeta * Tn\n",
+    "display(Markdown(\n",
+    "    rf\"$\\frac{{\\gamma}}{{k}}={gamma_k:.4f}, \\frac{{m}}{{k}}={m_k:.4f}, \\frac{{c}}{{k}}={c_k:.4f}$\"\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
     "# Dynamics matrix\n",
     "A = np.array(\n",
     "    [\n",
     "        [0, 1],\n",
-    "        [-msd_params.k / msd_params.m, -msd_params.c / msd_params.m],\n",
+    "        [-1 / m_k, -c_k / m_k],\n",
     "    ]\n",
     ")\n",
     "# Input matrix\n",
-    "B = np.array([[0, 1 / msd_params.m]]).transpose()\n",
+    "B = np.array([[0, gamma_k / m_k]]).transpose()\n",
     "# Output matrices\n",
     "C = np.array(\n",
     "    [\n",
@@ -2068,8 +2197,9 @@
     "    l=env.model.geom_pos[2, 2],\n",
     "    m=env.model.body_mass[2],\n",
     "    M=env.model.body_mass[1],\n",
+    "    gamma=env.model.actuator_gear[0, 0]\n",
     ")\n",
-    "print(f\"{ip_params.l=}, {ip_params.m=}, {ip_params.M=}\")"
+    "print(f\"l={ip_params.l}, n={ip_params.m}, M={ip_params.M}, gamma={ip_params.gamma}\")"
    ]
   },
   {
